--- a/pages/albumes.html
+++ b/pages/albumes.html
@@ -46,37 +46,30 @@
 
 <main>
     
-    <section class="noticias">
-    <h2>Conoce los ultimos lanzamientos!</h2>
+    <section class="grid-layout-3">
+    <div class="caja-a ca1">
+      <h2>Conoce los ultimos lanzamientos!</h2>
+    <p>Aca podes escuchar los ultimos lanzamientos, demos de proximos temas y algunos proyectos ineditos</p></div>
 
-    <p id="landing-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias minima sequi consequuntur harum maiores quis, inventore accusamus praesentium unde! Dicta praesentium dignissimos odit quam nostrum minus vitae placeat? Totam, doloremque?</p>
-</section>
 
-<section class="playlist">
+<div class="caja-a ca2">
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DZ06evO1uWiAi?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-</section>
+  
 
-<h3 class="recom">Mas Escuchados:</h3>
+<h3>Mas Escuchados:</h3></div>
 
-
+<div class="caja-a ca3">
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5aQtcr0PfEtk4FZCz5rLdV?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs1"></iframe> 
 
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5DKhyHLMBEJSG6RDtX9XOu?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs2"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5DKhyHLMBEJSG6RDtX9XOu?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs2"></iframe></div>
+<div class="caja-a ca4">
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3bp1UaQp06RxNXGU6EVkLh?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs1"></iframe>
 
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5uZOgeTKS8HCeEpmaPWpPf?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs2"></iframe>
-
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5uZOgeTKS8HCeEpmaPWpPf?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs2"></iframe></div>
+</section>
 
 
 </main>
-
-
-
-
-
-
-
-
 
     <footer class="footer"> <p> Seguinos en nuestras redes  </p> <ul> <li> <a href="https://www.instagram.com/emanero/"target=blank class="foot-link">Instagram</a></li>
     
