--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -47,34 +47,42 @@
 
     <main>
                
- <section class="cont1">
+ <section class="grid-layout-5">
+  <div class="caja-c cc1">
         <h2>Contaca con nuestro equipo! </h2>
 <p>Para obtener informacion sobre shows, fechas, colaboraciones y proyectos podes dejarnos tus datos junto con tu consulta y te responderemos cuando nos sea posible</p>
 
  </div>
- <div class="form">
- <form="name">
-    <label="nombre">Nombre</label>
- <input type=text> 
-  <label="Apellido">Apellido</label>
-  <input type=text>
-  <label="Telefono"> Telefono</label>
-  <input type=number>
-  <label="E-mail"> E-mail</label>
-  <input type=e-mail>
-  <label="Comentario">Comentarios</label>
-  <input type="text">
-  <button>Enviar</button>
+ <div class="caja-c cc2">
+ <div class="form-floating mb-3">
+  <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" disabled>
+  <label for="floatingInputDisabled">Nombre</label>
+</div>
+<div class="form-floating mb-3">
+  <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextareaDisabled" disabled></textarea>
+  <label for="floatingTextareaDisabled">Email</label>
+</div>
+<div class="form-floating mb-3">
+  <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px" disabled></textarea>
+  <label for="floatingTextarea2Disabled">Telefono</label>
+</div>
+  <div class="form-floating mb-3">
+    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px" disabled></textarea>
+    <label for="floatingTextarea2Disabled">Provincia</label>
+</div>
+<div>
+<button type="button" class="btn btn-dark">Enviar</button>
+</div>
+</div>
 
-  </div>
-
- </form>
- </section>
 
 
 
+<img src="../multimedia/Logo2.jpg" alt="Logo2" class="caja-c cc3">
 
- <div class="eml1"><img src="../multimedia/Logo2.jpg" alt="logo2" style="height: 200px; width: 200px;"></div>
+
+
+  </section>
 
 
     </main>
