--- a/pages/albumes.html
+++ b/pages/albumes.html
@@ -63,12 +63,14 @@
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5DKhyHLMBEJSG6RDtX9XOu?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs2"></iframe></div>
 <div class="caja-a ca4">
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3bp1UaQp06RxNXGU6EVkLh?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs1"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3bp1UaQp06RxNXGU6EVkLh?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs3"></iframe>
 
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5uZOgeTKS8HCeEpmaPWpPf?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs2"></iframe></div>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5uZOgeTKS8HCeEpmaPWpPf?utm_source=generator" width="45%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="songs4"></iframe></div>
+<div class="caja-a ca5"> <h3> Seguinos escuchando en Spotify! </h3>
+<a href="https://open.spotify.com/artist/2BTS8Np1YzPQuXjgdlqsBB" target="blank">Spotify</a></div>
 </section>
 
-
+ 
 </main>
 
     <footer class="footer"> <p> Seguinos en nuestras redes  </p> <ul> <li> <a href="https://www.instagram.com/emanero/"target=blank class="foot-link">Instagram</a></li>
