--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="caja-i c1">
     <h3>Mira el nuevo videoclip de "Esa Morocha"</h3>
     <p>Encontra mas temas como este en nuestra seccion Albumes</p>
-    <iframe width="100%" height="400" src="https://www.youtube.com/embed/tstCJt507aY" title="YouTube video player" frameborder="0"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe  src="https://www.youtube.com/embed/tstCJt507aY" title="YouTube video player" frameborder="0"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <div class="caja-i c2">
     <h4>Noticias!</h4>
@@ -73,7 +73,7 @@
         <div class="caja-i c3">
     <h3>Mira La entrevista mas reciente!</h3>
     <p>En esta entrevista en DAMN! se habla de su ultimo disco, de el proceso que se llevo a cabo en el y tanto de produccion como de introspeccion y un descubrimiento sobre a donde quiere dirigir su musica, mirala completa aca</p>
-    <iframe width="50%" height="315" src="https://www.youtube.com/embed/bm46EAcT2wg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/bm46EAcT2wg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     
     
     </div>
