--- a/pages/albumes.html
+++ b/pages/albumes.html
@@ -12,6 +12,21 @@
 <body class="full-back">
 
     <header>
+
+      <section class="navbar-reg">
+        <nav class=navbar1>
+          <div class="inx">
+            
+          <ul class="nav-link-reg">
+            <a href="../index.html" class="em1">Emanero</a>
+            <li><a href="../pages/albumes.html">Albumes</a></li>
+            <li><a href="../pages/Biografia.html">Biografia</a></li>
+            <li><a href="../pages/Contacto.html">Contacto</a></li>
+            <li><a href="../pages/Noticias.html">Noticias</a></li>
+          </ul></div>
+        </nav>
+      </section>
+      <section class="navbar-480px">
       <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">Emanero</a>
@@ -41,7 +56,7 @@
             </div>
           </div>
         </div>
-      </nav>
+      </nav></section>
     </header>
 
 <main>
